2008-10-21  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* app/actions/file-commands.c (file_open_recent_cmd_callback): ref
	the GimpDisplay and GimpImageFile objects while holding a
	reference to them. Fixes a potential crash if GIMP is closed while
	the image is being loaded.

2008-10-20  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* app/widgets/gimperrorconsole.c (gimp_error_console_init): don't
	make the font size even smaller. We already use a smaller font in
	the dock windows.

2008-10-17  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* plug-ins/file-psd/psd-save.c (xfwrite): fixed handling of empty
	strings. Don't quit silently, write an error message to stderr at
	least.

2008-10-17  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* app/core/gimp.[ch]: added signal Gimp::image-opened to announce
	that an image has been loaded and a display was created for it.

	* app/file/file-open.c (file_open_with_proc_and_display): call
	gimp_image_opened() to emit the new signal.

	* app/gui/dbus-service.xml
	* app/gui/gimpdbusservice.[ch]: propagate the 'opened' signal to
	listeners of the "org.gimp.GIMP.UI" DBus service.

	* app/gui/gui-unique.c: formatting.

2008-10-14  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* themes/Default/images/stock-gegl.svg
	* themes/Default/images/stock-gegl-22.svg
	* themes/Default/images/stock-gegl-22.png: remove white from the
	shadow to render correctly on dark backgrounds.

2008-10-14  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* app/widgets/gimpdialogfactory.c (gimp_dialog_factory_add_dialog):
	let new docks appear at the pointer position.

2008-10-13  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	Bug 556182 – Could you please explain a few strings [I18N]

	* plug-ins/pygimp/plug-ins/py-slice.py: added translator comments.

2008-10-10  Michael Natterer  <mitch@gimp.org>

	Merged from trunk:

	* app/tools/gimpmovetool.c (gimp_move_tool_button_release): flush